new files and ready to publish

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,15 @@
     width: 250px;
   }
 }
+.no-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
 
 .main-div{
     margin-top: 10px;
@@ -56,11 +65,11 @@ a{
 }
 
 /* cb */
-  
+
 * {
   box-sizing: border-box;
 }
-  
+
 body {
   display: flex;
   align-items: center;
